# MicroRTS-Py

./: .gitignore  .gitmodules  Dockerfile.cu118  Dockerfile.cu124  Dockerfile.cu126  GA_100_10%-population_log.txt  GA_5_100_10%-population_log.txt  GA_5_100_10%-population_log_old.txt  README.md  build.ps1  build.sh  hello_world.py  jarlist.txt  population_es_log.txt  population_log_1.txt  population_log_ga.txt  pyproject.toml  requirements.txt  run.py
experiments/: commons.py  ppo_gridnet.py  ssdv.py  ssdv_example.py  ssdv_trainer.py  ssvd_trainer.py  test.py  torch_ga.py
experiments/ssvd/: ssvd.py
gym_microrts/: petting_zoo_api.py
gym_microrts/envs/: vec_env.py  vec_env_custom.py  vec_mcts_env.py
