[tool.poetry]
name = "gym-microrts"
version = "0.0.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
exclude = [
    "gym_microrts/microrts/build/*",
    "gym_microrts/microrts/resources",
    "gym_microrts/microrts/src",
    "gym_microrts/microrts/data",
    "gym_microrts/microrts/lib/*.jar",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gymnasium = {extras = ["other"], version = "^1.0.0"}
JPype1 = "^1.3.0"
peewee = "^3.14.8"
spyder = {version = "^5.1.5", optional = true}
PettingZoo = "^1.16.0"
tqdm = "^4.67.1"
stable-baselines3 = "^2.5.0"
# torch = {version = "2.6.0+cu126", source = "torch-cuda126"}

[tool.poetry.dev-dependencies]
poetry-dynamic-versioning = "^0.13.0"
tensorboard = "^2.5.0"
wandb = "^0.12.1"
trueskill = "^0.4.5"
stable-baselines3 = "^2.1.0"
torch = "^2.6.0"
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[[tool.poetry.source]]
name = "torch-cuda126"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
spyder = ["spyder"]
cleanrl = ["cleanrl"]
